[package]
name    = "cipherbreaker"
version = "0.1.0"
authors = ["lzq666amn@gmail.com"]
edition = "2021"

[dependencies]
egui       = "0.27.2"
crypto     = "0.5.1"
rayon      = "1.10.0"
regex      = "1.10.4"
rand       = "0.8.5"
async-std  = "1.12.0"
winapi     = "0.3.9"
serde      = "1.0.199"
env_logger = "0.11.3"

[dev-dependencies]
rustc-test   = "0.3.1"
cargo-docgen = "0.1.3"


[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
lto = true

# [target.'cfg(target_arch = "x86_64")']
# rustflags = ["-C", "target-feature=+sse4.2"]

# [target.'cfg(target_os = "windows")']
# rustflags = ["-C", "link-arg=/SUBSYSTEM:WINDOWS", "-C", "link-arg=USER32.lib", "-C", "link-arg=GDI32.lib"]
